Set overlow-x hidden for html tag (fix issues with shapes on mobile views)

--- a/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
@@ -1,6 +1,7 @@
 // Styles for the general custom blocks
 
-// Overflow body (for the opened menu/popup/etc.)
+// Overflow body and html (for hide brand shapes)
+html,
 body {
   overflow-x: hidden;
 }
